ADD TTL and replace by name tabucom
